apps/dssp-lb-test-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-lb-test-1
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /dssp-lb-test-1
            pathType: Prefix
            backend:
              service:
                name: dssp-lb-test-1
                port:
                  number: 80
